# manrf

./: Cargo.toml  todo.md
.github/workflows/: test.yaml
esp32/: Cargo.toml  export-esp.sh  own_tty.sh
esp32/src/: app.rs  main.rs
manrf/: Cargo.toml  LICENSE  todo.md
manrf/src/: defs.rs  elements.rs  event.rs  full_example_test.rs  graphics.rs  lib.rs  main.rs  testing_helpers.rs
manrf/src/elements/: align.rs  component.rs  handler.rs  style.rs
manrf/src/event/: simulator.rs
manrf/src/utils/: edge_insets.rs
src/: app_tests.rs  component.rs  constraints.rs  data_binding.rs  defs.rs  display_tests.rs  elements.rs  event.rs  example_components.rs  framework.rs  full_example_test.rs  main.rs  palette.rs  render_tree.rs  testing_helpers.rs  utils.rs
src/elements/: border.rs  component.rs  handler.rs  padding.rs  style.rs
src/utils/: constraints.rs
