[package]
name = "xtensaa"
version = "0.1.0"
authors = ["Brian Craig <briancraigok@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
display-interface-spi = "0.4.1"
embedded-graphics = "0.7.1"
embedded-hal = "1.0.0-alpha.9"
esp-idf-hal = "0.40.1"
esp-idf-sys = { version = "0.32.1", features = ["binstart"] }
manrf = { version = "0.1.0", path = "../manrf" }
mipidsi = "0.6.0"

[build-dependencies]
embuild = "0.31.1"
